# VXSamples

./: .gitignore  Makefile  README.md  docker-compose.yml  nginx.conf
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  malshare.md  pyproject.toml  run.py
backend/app/: routes.py  settings.py
backend/app/controllers/: MainController.py
backend/app/plugins/: APKLabPlugin.py  AnyRunPlugin  BFKPlugin.py  CAPEPlugin.py  CuckooPlugin.py  CybercrimeTrackerPlugin.py  DocGuardPlugin.py  ELFDigestPlugin.py  FileScanPlugin.py  GitHubPlugin.py  HashlookupPlugin.py  HuntIOPlugin.py  HybridAnalysisPlugin.py  IBMXForcePlugin.py  IntezerPlugin.py  JOESandboxPlugin.py  JottiPlugin.py  KasperskyPlugin.py  KleenScanPlugin.py  KoodousPlugin.py  MDTIPlugin.py  MHRPlugin.py  MalSharePlugin.py  MalwareBazaarPlugin.py  MetaDefenderPlugin.py  MnemonicPlugin.py  NoVirusThanksPlugin.py  TalosPlugin.py  ThreatFoxPlugin.py  TriagePlugin.py  URLQueryPlugin.py  URLScanPlugin.py  URLhausPlugin.py  UnpacMePlugin.py  VMRayPlugin.py  ValhallaPlugin.py  VirScanPlugin.py  VirusBayPlugin.py  VirusSharePlugin.py  VirusTotalPlugin.py  (+3 more)
backend/app/plugins/dead/: AVBoxPlugin.py  AntiScanPlugin.py  DynCheckPlugin.py  MalwrPlugin.py  NoDistributePlugin.py  SpyralScannerPlugin.py  VirusImmunePlugin.py
frontend/: VXSamples-app.vue  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: Footer.vue  HashSearchForm.vue  Header.vue  HeroSection.vue  SearchResults.vue
